--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "@vueuse/motion": "^2.1.0",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "i18next": "^23.11.3",
     "i18next-vue": "^4.0.0",
     "pinia": "^2.1.7",
+    "tailwind-merge": "^2.3.0",
     "typescript": "^5.4.5",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
