--- a/server/config.json
+++ b/server/config.json
@@ -1,6 +1,6 @@
 {
     "database": {
-        "url": "mongodb://localhost:27017/undefined.exe-discord"
+        "url": "mongodb://localhost:27017/discord"
     },
     "server": {
         "port": 5000
